<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="42sp" />
    <ImageView
        android:id="@+id/imgMilk"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtTotal"
        android:contentDescription="@string/content_description"
        android:src="@drawable/milk" />
    <TextView
        android:id="@+id/perClickTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_click_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgMilk"
        android:layout_marginTop="20dp"
        android:textSize="21sp" />
    <TextView
        android:id="@+id/perClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_default_value"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgMilk"
        android:layout_toEndOf="@id/perClickTitle"
        android:layout_marginTop="20dp"
        android:textSize="21sp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perClickTitle">
        <TableRow
            android:id="@+id/cookieRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">
            <TextView
                android:id="@+id/cookieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/cookie_clicks"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btnCookie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:onClick="cookieClicks"/>
            <TextView
                android:id="@+id/cookieCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/costs_50"
                android:textSize="11sp" />
        </TableRow>
        <TableRow
            android:id="@+id/oreoRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">
            <TextView
                android:id="@+id/oreoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/oreo_clicks"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnOreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:onClick="oreoClicks"/>
            <TextView
                android:id="@+id/oreoCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/costs_100"
                android:textSize="11sp" />
        </TableRow>
        <TableRow
            android:id="@+id/chocmilkRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">
            <TextView
                android:id="@+id/chocmilkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/choc_milk"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnChocMilk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:onClick="chocMilk"/>
            <TextView
                android:id="@+id/chocmilkCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/costs_10000"
                android:textSize="11sp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>